feat: add automatic AUR package generation and submission
  - Add AUR package generation to CI/CD workflow
  - Create scripts for AUR package management
  - Update documentation with AUR installation instructions
  - Fix unused import in database.go

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -272,6 +272,8 @@ jobs:
         run: |
           set -euo pipefail
           TAG="v${{ needs.semantic-release.outputs.new_release_version }}"
+          OWNER="joelgrimberg"
+          REPO="projector"
           
           # Download all tarballs to compute checksums
           mkdir -p dist
